# NVSim

./: .gitignore  AGENTS.md  CURRENT_STATUS.md  NVSim_model_cn.md  README.md  REFERENCE_SIMULATOR_GRN_REVIEW.md  VALIDATION_REPORT.md  pyproject.toml
docs/: alpha_source_modes.md
examples/: README.md  plot_bifurcation.py  plot_linear.py  plot_sergio_100g_ds8_bifurcation.py  plot_sergio_100g_ds8_regulator_activity_benchmark.py  plot_sergio_1200g_ds3_bifurcation.py  plot_sergio_ecoli1200_25master.py  plot_sergio_grn_bifurcation.py  plot_sergio_grn_multimaster.py  plot_velocity_showcase.py  run_bifurcation_state_anchor.py  run_branching_state_anchor.py  run_ds6_stepfix_observation_compare.py  run_linear_continuous_program.py  run_mvp_bifurcation.py  run_mvp_branching.py  run_mvp_linear.py  run_sergio_100g_ds8_bifurcation.py  run_sergio_100g_ds8_regulator_activity_benchmark.py  run_sergio_1200g_ds3_bifurcation.py  run_sergio_ds6_dynamic_graph.py  run_sergio_ds6_dynamic_graph_stepfix.py  run_sergio_ecoli1200_25master.py  run_sergio_grn_bifurcation.py  run_sergio_grn_multimaster.py  run_trrust_mouse_small.py  tutorial.py
nvsim/: __init__.py  config.py  grn.py  kinetics.py  modes.py  noise.py  output.py  plotting.py  production.py  regulation.py  sergio_io.py  simulate.py  trajectory.py  velocity_plotting.py
scripts/: __init__.py  celloracle_demo_regression.py  prepare_trrust_mouse_dataset.py  sergio_1200g_ds3_showcase.py  sergio_1200g_ds3_strong_bifurcation.py  sergio_1200g_ds3_strong_branching.py
tests/: test_bifurcation.py  test_branching.py  test_grn.py  test_modes.py  (+13 more)
(+9 files in other folders)
