[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nvsim"
version = "0.1.0"
description = "Lightweight GRN-aware RNA velocity simulator MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "anndata",
    "scanpy",
    "scvelo",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["nvsim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
